# cricket-brain

./: AI_DEVELOPMENT_STATEMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LAUNCH_MATERIALS.md  LICENSE  PROJECT_DOSSIER.md  README.md  README_WASM.md  RESEARCH_WHITEPAPER.md  SECURITY.md  USE_CASES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  uc01-cardiac.yml  uc02-bearings.yml  uc03-marine.yml  uc04-grid.yml  website-astro.yml
benches/: throughput.rs
benchmarks/: gap_detection_benchmark.rs  jnd_benchmark.rs  pattern_separation_benchmark.rs  sdt_benchmark.rs  spike_latency_benchmark.rs  stress_test_benchmark.rs  synops_benchmark.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  logger.rs  memory.rs  neuron.rs  plasticity.rs  synapse.rs
crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi/include/: cricket_brain.h
crates/ffi/src/: lib.rs
crates/ffi/tests/: ffi_roundtrip.rs
crates/python/: Cargo.toml  pyproject.toml  requirements.txt
crates/python/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: architecture.md  book.toml  math.md  scaling.md
docs/src/: SUMMARY.md  c_cpp_integration.md  getting_started.md  mathematical_core.md  python_bindings.md  scientific_foundation.md  wasm_guide.md
examples/: ablation_study.rs  arduino_minimal.rs  baselines.rs  cricket_cli.rs  frequency_discrimination.rs  live_demo.rs  morse_alphabet.rs  multi_freq_demo.rs  profile_speed.rs  python_sentinel.py  research_gen.rs  scale_predict.rs  scale_test.rs  sentinel_ecg_monitor.rs  sequence_predict.rs
examples/wasm_demo/: index.html  main.ts
src/: brain.rs  json_telemetry.rs  lib.rs  main.rs  neuron.rs  patterns.rs  resonator_bank.rs  sequence.rs  synapse.rs  token.rs
tests/: coincidence_test.rs  cross_platform_logic.rs  edge_cases.rs  fuzz_guardrails.rs  morse_test.rs  plasticity_test.rs  resonator_test.rs  sentinel_scenario.rs  sequence_test.rs  token_test.rs
use_cases/: MASTER_PLAN.md
use_cases/01_cardiac_arrhythmia/: .gitignore  BENCHMARK_ROADMAP.md  CLAUDE.md  Cargo.toml  README.md  ci.yml
use_cases/01_cardiac_arrhythmia/benches/: cardiac_bench.rs
use_cases/01_cardiac_arrhythmia/benchmarks/: cardiac_baselines.rs  cardiac_drift_sweep.rs  cardiac_eval.rs  cardiac_latency.rs  cardiac_memory.rs  cardiac_mitbih.rs  cardiac_mitbih_baselines.rs  cardiac_reject.rs  cardiac_sdt.rs  cardiac_stress.rs  cardiac_stress_sweep.rs
use_cases/01_cardiac_arrhythmia/data/: SOURCES.md
use_cases/01_cardiac_arrhythmia/data/processed/: sample_record.csv
use_cases/01_cardiac_arrhythmia/docs/: api.md  competitive_analysis.md  limitations.md  methodology.md  results.md
use_cases/01_cardiac_arrhythmia/python/: download_mitbih.py  evaluate.py  plot_results.py  preprocess.py  requirements.txt
use_cases/01_cardiac_arrhythmia/results/: benchmark_config.json  cardiac_baselines.csv  cardiac_confusion_matrix.csv  cardiac_csv_summary.csv  cardiac_drift_sweep.csv  cardiac_failure_cases.md  cardiac_mitbih_baselines.csv  cardiac_mitbih_failure_cases.md  cardiac_mitbih_per_record.csv  cardiac_mitbih_skeleton_only.json  cardiac_mitbih_summary.json  cardiac_per_class_metrics.csv  cardiac_reject_curve.csv  cardiac_stress_amp_jitter.csv  cardiac_stress_baseline_wander.csv  cardiac_stress_hrv.csv  cardiac_stress_missing_qrs.csv  cardiac_stress_morph_jitter.csv  cardiac_stress_motion_burst.csv  cardiac_stress_noise.csv  cardiac_stress_sweep.csv  cardiac_synthetic_summary.json
use_cases/01_cardiac_arrhythmia/src/: baselines.rs  detector.rs  ecg_signal.rs  evaluate.rs  lib.rs  main.rs  metrics.rs  mitbih.rs  preprocess.rs  report.rs  synthetic.rs
use_cases/02_predictive_maintenance/: CLAUDE.md  Cargo.toml  README.md  ci.yml
use_cases/02_predictive_maintenance/benchmarks/: bearing_latency.rs  bearing_memory.rs  bearing_sdt.rs  bearing_stress.rs
use_cases/02_predictive_maintenance/data/: SOURCES.md
use_cases/02_predictive_maintenance/data/processed/: sample_bearing.csv
use_cases/02_predictive_maintenance/docs/: api.md  competitive_analysis.md  limitations.md  results.md
use_cases/02_predictive_maintenance/python/: evaluate.py  plot_results.py  preprocess.py
use_cases/02_predictive_maintenance/src/: detector.rs  lib.rs  main.rs  vibration_signal.rs
use_cases/03_marine_acoustic/: CLAUDE.md  Cargo.toml  README.md  ci.yml
use_cases/03_marine_acoustic/benchmarks/: marine_latency.rs  marine_memory.rs  marine_sdt.rs  marine_stress.rs  marine_v02.rs
use_cases/03_marine_acoustic/data/: SOURCES.md
use_cases/03_marine_acoustic/data/processed/: sample_marine.csv
use_cases/03_marine_acoustic/docs/: api.md  competitive_analysis.md  limitations.md  results.md
use_cases/03_marine_acoustic/python/: evaluate.py  plot_results.py  preprocess.py  requirements.txt
use_cases/03_marine_acoustic/src/: acoustic_signal.rs  detector.rs  lib.rs  main.rs
use_cases/04_power_grid/: CLAUDE.md  Cargo.toml  README.md
use_cases/04_power_grid/benchmarks/: grid_latency.rs  grid_memory.rs  grid_sdt.rs  grid_stress.rs
use_cases/04_power_grid/data/: SOURCES.md
use_cases/04_power_grid/data/processed/: sample_grid.csv
use_cases/04_power_grid/docs/: api.md  competitive_analysis.md  limitations.md  results.md
use_cases/04_power_grid/python/: evaluate.py  plot_results.py  preprocess.py
use_cases/04_power_grid/src/: detector.rs  grid_signal.rs  lib.rs  main.rs
use_cases/shared/: metrics.json
use_cases/shared/scripts/: inject_metrics.py
use_cases/shared/templates/: README.template.md  page.template.html
website/: index.html
website/astro/: WEBSITE_ARCHITECTURE.md  WEBSITE_DATA_PIPELINE.md  WEBSITE_RELEASE_QA.md  WEBSITE_WORKFLOW.md  astro.config.mjs  package-lock.json  package.json  vitest.config.ts
website/astro/src/i18n/: en.ts  (+2 more)
website/css/: style.css
website/js/: app.js  simulation.js
website/pages/: bearings.html  cardiac.html  datenschutz.html  grid.html  impressum.html  marine.html  whitepaper.html
(+31 files in other folders)
