[package]
name = "cricket-brain-ffi"
version = "1.0.0-rc1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "C-compatible FFI bridge for cricket-brain"
documentation = "https://docs.rs/cricket-brain-ffi"
repository = "https://github.com/BEKO2210/cricket-brain"
keywords = ["ffi", "c", "jni", "swift", "neuromorphic"]
categories = ["api-bindings", "science", "algorithms"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cricket-brain = { version = "1.0.0-rc1", path = "../.." }

[build-dependencies]
cbindgen = "0.28"
