[package]
name = "cricket-brain-python"
version = "3.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "PyO3 bindings for cricket-brain"
repository = "https://github.com/BEKO2210/cricket-brain"

[lib]
name = "cricket_brain"
crate-type = ["cdylib"]

[dependencies]
cricket-brain = { path = "../..", version = "3.0.0" }
pyo3 = { version = "0.24", features = ["extension-module"] }
