[package]
name = "cricket-brain-wasm"
version = "3.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "wasm-bindgen TypeScript-friendly bindings for cricket-brain"
repository = "https://github.com/BEKO2210/cricket-brain"

[lib]
crate-type = ["cdylib"]

[dependencies]
cricket-brain = { path = "../..", version = "3.0.0" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
