[package]
name = "cricket-brain-cardiac"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Cardiac arrhythmia pre-screening using CricketBrain delay-line coincidence detection"
license = "AGPL-3.0-only"
publish = false

[workspace]

[dependencies]
cricket-brain = { path = "../.." }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cardiac_bench"
harness = false
