[package]
name = "cricket-brain-cardiac"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Cardiac arrhythmia pre-screening using CricketBrain delay-line coincidence detection"
license = "AGPL-3.0-only"
publish = false

[workspace]

[dependencies]
cricket-brain = { path = "../.." }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cardiac_bench"
harness = false

[[example]]
name = "cardiac_sdt"
path = "benchmarks/cardiac_sdt.rs"

[[example]]
name = "cardiac_latency"
path = "benchmarks/cardiac_latency.rs"

[[example]]
name = "cardiac_memory"
path = "benchmarks/cardiac_memory.rs"

[[example]]
name = "cardiac_stress"
path = "benchmarks/cardiac_stress.rs"

[[example]]
name = "cardiac_eval"
path = "benchmarks/cardiac_eval.rs"

[[example]]
name = "cardiac_stress_sweep"
path = "benchmarks/cardiac_stress_sweep.rs"

[[example]]
name = "cardiac_baselines"
path = "benchmarks/cardiac_baselines.rs"

[[example]]
name = "cardiac_reject"
path = "benchmarks/cardiac_reject.rs"

[[example]]
name = "cardiac_mitbih"
path = "benchmarks/cardiac_mitbih.rs"

[[example]]
name = "cardiac_mitbih_baselines"
path = "benchmarks/cardiac_mitbih_baselines.rs"
