[package]
name = "cricket-brain-bearings"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Predictive bearing fault detection using CricketBrain resonator bank"
license = "AGPL-3.0-only"
publish = false

[workspace]

[dependencies]
cricket-brain = { path = "../.." }

[[example]]
name = "bearing_sdt"
path = "benchmarks/bearing_sdt.rs"

[[example]]
name = "bearing_latency"
path = "benchmarks/bearing_latency.rs"

[[example]]
name = "bearing_memory"
path = "benchmarks/bearing_memory.rs"

[[example]]
name = "bearing_stress"
path = "benchmarks/bearing_stress.rs"
